--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           Enter the phone number here
           This will be used to send the WhatsApp message
         
-        const phoneNum = '000000000';
+        const phoneNum
         */
         let Rque = document.getElementById('Rque').value;
         let Mque = document.getElementById('Mque').value;
@@ -204,6 +204,7 @@ document.getElementById('sendmassage').addEventListener('click', function() {
     </script>
 </body>
 </html>
+
 
 
 
