--- a/index.html
+++ b/index.html
@@ -156,12 +156,13 @@ Thank you!`;
 
 // בניית ה-URL לשליחת ההודעה
         /*
-    const whatsappURL = `https://wa.me/${phoneNum}?text=${message}`;
+    const whatsappURL ;
 
     
 // הפנייה ללינק כדי לפתוח את WhatsApp עם ההודעה
-    window.location.href = whatsappURL;
+    window.location.href;
       */  
+    alert(message)
     }
 
     wait_to_name.addEventListener('input' , function(){
@@ -204,6 +205,7 @@ document.getElementById('sendmassage').addEventListener('click', function() {
     </script>
 </body>
 </html>
+
 
 
 
