--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Thank you!`;
             publish_name.style.color = 'white';
             publish_name.style.position = 'right';
             wait_to_name.style.fontSize = '24px';
-            publish_name.innerHTML = "שלום , "+ wait_to_name.value;
+            publish_name.textContent = "שלום , "+ wait_to_name.value;
             
         }
         else{
@@ -205,6 +205,7 @@ document.getElementById('sendmassage').addEventListener('click', function() {
     </script>
 </body>
 </html>
+
 
 
 
